--- a/vm-executor-wasmer/Cargo.toml
+++ b/vm-executor-wasmer/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
 name = "dharitri-chain-vm-executor-wasmer"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 publish = false # will also be published, but it is not yet ready for that
 
 [lib]
 
-[dependencies.dharitri-chain-vm-executor]
-version = "0.2.0"
-path = "../vm-executor"
-
 [dependencies]
+dharitri-chain-vm-executor = { path = "../vm-executor" }
+
 wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "cdd1550", default-features = false, features = [
     "singlepass",
     "sys",
